--- a/index.html
+++ b/index.html
@@ -165,7 +165,10 @@
           <a>Advertise Your Products</a>
           <a>Self-Publish with Us</a>
           <a>Host an Amazon Hub</a>
-          <a>See More Make Money with Us</a>
+          <a
+            ><i class="fa-solid fa-caret-down"></i>See More Make Money with
+            Us</a
+          >
         </ul>
         <ul>
           <p>Amazon Payment Products</p>
@@ -193,9 +196,7 @@
           <a>Privacy Notice</a>
           <a>Your ads privacy choice</a>
         </div>
-        <div class="copyright">
-          © 1996-2024, Amazon.com, Inc. or its affiliates
-        </div>
+        <div class="copyright">© Samyak Shakya</div>
       </div>
     </footer>
   </body>
